--- a/_config.yml
+++ b/_config.yml
@@ -18,6 +18,7 @@ email: fg222ak@student.lnu.se
 description: >- # this means to ignore newlines until "baseurl:"
   This website is part of an assignment from my university where I am to use the SSG Jekyll to implement a website that will act as the front for my coming published assignments.
 baseurl: "" # the subpath of your site, e.g. /blog
+excerpt_separator: <!--more-->
 url: "" # the base hostname & protocol for your site, e.g. http://example.com
 # twitter_username: jekyllrb
 github_username:  FilipGal
