--- a/_config.yml
+++ b/_config.yml
@@ -19,7 +19,7 @@ description: >- # this means to ignore newlines until "baseurl:"
   This website is part of an assignment from my university where I am to use the SSG Jekyll to implement a website that will act as the front for my coming published assignments.
 baseurl: "" # the subpath of your site, e.g. /blog
 excerpt_separator: <!--more-->
-url: "" # the base hostname & protocol for your site, e.g. http://example.com
+url: "filipgal.github.io" # the base hostname & protocol for your site, e.g. http://example.com
 # twitter_username: jekyllrb
 github_username:  FilipGal
 
@@ -28,6 +28,7 @@ markdown: kramdown
 theme: minima
 plugins:
   - jekyll-feed
+  - jekyll-seo-tag
 
 # Exclude from processing.
 # The following items will not be processed, by default. Create a custom list
