Adding linkedin, update to about.md and blog updates

--- a/_config.yml
+++ b/_config.yml
@@ -12,6 +12,7 @@ excerpt_separator: <!--more-->
 url: http://filipgal.github.io
 # twitter_username: jekyllrb
 github_username:  FilipGal
+linkedin_username: filip-gal-3a518213b
 
 # Build settings
 markdown: kramdown
